# caca_promo_supermercado

./: .gitignore  git_push_daily.bat  main.py  pyproject.toml  run_all.bat  run_scheduled.bat
caca_promo/analytics/: loader.py  matcher.py  metrics.py
caca_promo/config/: __init__.py  settings.py
caca_promo/core/: __init__.py  models.py  registry.py
caca_promo/dashboard/: app.py  charts.py  components.py
caca_promo/export/: __init__.py  csv_export.py
caca_promo/report/: __init__.py  builder.py  competitive.py  formatters.py
caca_promo/storage/: __init__.py  database.py
caca_promo/stores/: __init__.py  loader.py
caca_promo/stores/_template/: store.py
caca_promo/stores/jaguare/: store.py
caca_promo/stores/mambo/: store.py
caca_promo/stores/paodeacucar/: store.py
caca_promo/stores/pegpese/: store.py
data/: promotions.db
output/exports/jaguare/: promotions_20260629_223711.csv  promotions_20260630_120119.csv  promotions_20260630_200120.csv  promotions_20260701_120103.csv  promotions_20260701_200123.csv  promotions_20260702_120153.csv  promotions_20260702_200233.csv  promotions_20260703_120148.csv  promotions_20260703_200230.csv  promotions_20260704_120210.csv  promotions_20260704_200121.csv  promotions_20260705_120158.csv  promotions_20260705_200147.csv  promotions_20260706_120035.csv  promotions_20260707_120203.csv  promotions_20260707_200153.csv  promotions_20260708_120239.csv  promotions_20260708_200246.csv  promotions_20260709_120228.csv  promotions_20260709_200242.csv  promotions_20260710_120159.csv  promotions_20260710_200221.csv  (+22 more)
(+352 files in other folders)
