[project]
name = "web-scraper-caca-promo"
version = "0.2.0"
description = "Scraper de promocoes de supermercados"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "kaleido>=1.3.0",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "plotly>=6.8.0",
    "rapidfuzz>=3.14.5",
    "streamlit>=1.58.0",
]

[project.scripts]
caca-promo = "main:start"

[tool.uv]
package = false
